# sportify

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  init-letsencrypt.sh  pyproject.toml  rename_files.py  requirements.txt
.ebextensions/: django.config
.github/workflows/: dev_deploy.yml  docker-build.yml
categories/: admin.py  models.py
categories/migrations/: 0001_initial.py
centers/: admin.py  models.py
centers/migrations/: 0001_initial.py
common/: views.py
config/: settings.py  urls.py
courses/: admin.py  apps.py  models.py
courses/migrations/: 0001_initial.py
dong/: admin.py  apps.py  models.py
dong/migrations/: 0001_initial.py  0002_alter_dong_options_alter_dong_table.py
gugun/: admin.py  apps.py  models.py
gugun/migrations/: 0001_initial.py  0002_alter_gugun_options_alter_gugun_table.py
jibun_addresses/: admin.py  apps.py  models.py
jibun_addresses/migrations/: 0001_initial.py
nginx/: default.conf  default.conf.backup  fullchain.pem  nginx.conf  privkey.pem
nginx/conf.d/: default.conf
programs/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
programs/migrations/: 0001_initial.py  0002_remove_program_progrm_estbl_wkday_nm_and_more.py  0003_alter_program_options_and_more.py
regions/: admin.py  models.py  serializers.py
regions/migrations/: 0001_initial.py  0002_sido_image.py  0003_alter_sido_image.py
road_addresses/: admin.py  apps.py  models.py
road_addresses/migrations/: 0001_initial.py  (+1 more)
sido/: admin.py  apps.py  models.py
sido/migrations/: 0001_initial.py  (+1 more)
(+8 files in other folders)
