[tool.poetry]
name = "sportify"
version = "0.1.0"
description = "sportify python server"
authors = ["Park Dongkyu <86235780+dong99u@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.12"
pillow = "^11.0.0"
django = "^5.1.3"
numpy = "^2.1.3"
wheel = "^0.45.1"
mysqlclient = "^2.2.6"
pymysql = "^1.1.1"
python-dotenv = "^1.0.1"
gunicorn = "^21.2.0"
whitenoise = "^6.6.0"
django-cors-headers = "^4.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
